--- a/cfg/analysis.cnf
+++ b/cfg/analysis.cnf
@@ -1,6 +1,3 @@
-# Configuration file for the SSRG and code analysis.
-# Created as a part of the project at the University of Defence, Czech Republic
-# by Petr Bojda, 12-27-2018.
 
 [coder]
 ssrg_init = 1,0,0,0,0
@@ -14,3 +11,5 @@ oversampling_factor = 24
 [signaling]
 time_accelerating_factor = .8
 time_offset = 0
+pulse_shape = rect
+
